force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Column_History__c/fields/agf__Column__c.field-meta.xml
<CustomField>
    <fullName>agf__Column__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Column</label>
    <referenceTo>agf__ADM_Column__c</referenceTo>
    <relationshipLabel>Column History</relationshipLabel>
    <relationshipName>Column_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>