force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Column_History__c/fields/agf__Column_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Column_Type__c</fullName>
    <formula>agf__Column__r.agf__Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Column Type</label>
    <type>Text</type>
</CustomField>