force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Column_History__c/fields/agf__Duration__c.field-meta.xml
<CustomField>
    <fullName>agf__Duration__c</fullName>
    <description>Duration with 4 precision points. Here integer part is number of days and fractional part can be converted into hours by multiplying by 24.</description>
    <formula>IF( ISBLANK(agf__Time_Left__c) , NOW() , agf__Time_Left__c)  -  agf__Time_Entered__c</formula>
    <label>Duration</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>