force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Column_History__c/fields/agf__Duration_By_Work_Days__c.field-meta.xml
<CustomField>
    <fullName>agf__Duration_By_Work_Days__c</fullName>
    <description>This is duration by business days. How many days is between Time Left and Time entered
https://help.salesforce.com/help/pdfs/en/formula_date_time_tipsheet.pdf</description>
    <formula>(5 * ( FLOOR( (DATEVALUE (IF( ISBLANK(agf__Time_Left__c) , NOW() , agf__Time_Left__c)) - DATE( 1900, 1, 8) ) / 7 ) ) + 
			MIN( 5, MOD( DATEVALUE(IF( ISBLANK(agf__Time_Left__c) , NOW() , agf__Time_Left__c)) - DATE( 1900,
				        1, 8), 7 )
		       ) )

-
(5 * ( FLOOR( ( DATEVALUE(agf__Time_Entered__c)- DATE( 1900, 1, 8) ) / 7 ) )  + MIN( 5, MOD( DATEVALUE(agf__Time_Entered__c) - DATE( 1900,
1, 8), 7 ) ) )</formula>
    <label>Duration_By_Work_Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>