force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Column_History__c/fields/agf__Time_Entered__c.field-meta.xml
<CustomField>
    <fullName>agf__Time_Entered__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>The timestamp for when a work record enters a column</description>
    <label>Time Entered</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>